traceback.txt
Traceback (most recent call last):
  File "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/pudb/__init__.py", line 93, in runscript
    dbg._runscript(mainpyfile)
  File "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/pudb/debugger.py", line 432, in _runscript
    self.run(statement, globals=globals_, locals=locals_)
  File "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/bdb.py", line 431, in run
    exec(cmd, globals, locals)
  File "<string>", line 1, in <module>
  File "grade.py", line 55
    print("sec_row_cnt = " + str(sec_row_cnt))
        ^
SyntaxError: invalid syntax
